<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_full_name"
            android:minHeight="48dp"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/your_age"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preferred_salary"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/current_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>


        <SeekBar
            android:id="@+id/salary_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5000"
            android:min="100"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="How is your JavaScript?"/>
            <RadioGroup
                android:id="@+id/radio_js"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/js_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"/>
                <RadioButton
                    android:id="@+id/js_mediocre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mediocre"/>

                <RadioButton
                    android:id="@+id/js_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/bad" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="How is your Java?"/>
            <RadioGroup
                android:id="@+id/radio_ja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/ja_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"/>
                <RadioButton
                    android:id="@+id/ja_mediocre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mediocre"/>

                <RadioButton
                    android:id="@+id/ja_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/bad" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="How is your Kotlin?"/>
            <RadioGroup
                android:id="@+id/radio_kt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/kt_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"/>
                <RadioButton
                    android:id="@+id/kt_mediocre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mediocre"/>

                <RadioButton
                    android:id="@+id/kt_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/bad" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="How is your C#?"/>
            <RadioGroup
                android:id="@+id/radio_cs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/cs_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"/>
                <RadioButton
                    android:id="@+id/cs_mediocre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mediocre"/>

                <RadioButton
                    android:id="@+id/ger_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/bad" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="How is your C++?"/>
            <RadioGroup
                android:id="@+id/radio_cpp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/cpp_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"/>
                <RadioButton
                    android:id="@+id/cpp_mediocre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mediocre"/>

                <RadioButton
                    android:id="@+id/cpp_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/bad" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/exp_2years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_have_experience_over_2_years"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/team_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamexp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/send_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_rdy"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/test_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps_text_exp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>
</android.widget.ScrollView>